# hmn_internship

./: .gitignore  README.md
circles/: CMakeLists.txt  asmOpenCV.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  worker_thread.cpp  worker_thread.h
complex/: CMakeLists.txt
complex/lib/: CMakeLists.txt  complex.cpp  complex.h
complex/program/: CMakeLists.txt  cout.cpp  cout.h  exponent.cpp  exponent.h  main.cpp
hypotrochoid/: CMakeLists.txt  input_win.cpp  input_win.h  main.cpp  main_window.cpp  main_window.h
matrix/: CMakeLists.txt  main.cpp  matrix.h
mvc/: CMakeLists.txt  combo_delegate.cpp  combo_delegate.h  doc_window.cpp  doc_window.h  main.cpp  main_win.cpp  main_win.h  main_window.ui  mvc-04.qrc  tree_item.cpp  tree_item.h  tree_model.cpp  tree_model.h  tree_view.cpp  tree_view.h
mvc/translations/: mvc-04_en_RU.ts
network/: CMakeLists.txt  receiver.cpp  receiver.h  receiver_dialog.ui  receiver_main.cpp  sender.cpp  sender.h  sender_dialog.ui  sender_main.cpp
replace/: CMakeLists.txt
replace/lib/: CMakeLists.txt
replace/program/: CMakeLists.txt  main.cpp
string/: CMakeLists.txt
string/lib/: CMakeLists.txt  mystring.cpp  mystring.h
string/program/: CMakeLists.txt  main.cpp
tables/: CMakeLists.txt
tables/lib/: CMakeLists.txt  tables.cpp  tables.h  views.cpp  views.h
tables/program/: CMakeLists.txt  cout.cpp  cout.h  main.cpp
